--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,8 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#357C97"
+    android:orientation="vertical"
     tools:context="com.example.project.Login">
 
 
@@ -14,22 +14,23 @@
         android:id="@+id/imgbtnBack"
         android:layout_width="55dp"
         android:layout_height="40dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
-        android:backgroundTint="@color/teal_700"
         android:background="@drawable/circle_background"
+        android:backgroundTint="@color/teal_700"
         app:srcCompat="@drawable/ic_back" />
 
     <TextView
         android:id="@+id/tVNhapPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="40dp"
+        android:text="Đăng nhập"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:layout_marginTop="50dp"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        android:text="Hãy nhập mật khẩu của bạn" />
+        android:textSize="40dp"
+        android:textStyle="bold" />
 
     <!-- Trường nhập tài khoản -->
     <TableLayout
@@ -38,13 +39,13 @@
         android:layout_gravity="center"
         android:layout_marginTop="15dp"
         android:gravity="center"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <TableRow
             android:layout_width="269dp"
             android:layout_height="match_parent"
-            android:layout_marginLeft="50sp"
-            android:layout_marginRight="50sp"
+            android:layout_marginStart="50sp"
+            android:layout_marginEnd="50sp"
             android:layout_marginBottom="20sp"
             android:background="@drawable/rounded_background_2">
 
@@ -52,10 +53,10 @@
                 android:id="@+id/user"
                 android:layout_width="wrap_content"
                 android:layout_height="45sp"
-                android:layout_marginLeft="20sp"
+                android:layout_marginStart="20sp"
+                android:background="@null"
                 android:ems="10"
                 android:hint="Tài khoản"
-                android:background="@null"
                 android:inputType="text" />
 
         </TableRow>
@@ -63,8 +64,8 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="50sp"
-            android:layout_marginRight="50sp"
+            android:layout_marginStart="50sp"
+            android:layout_marginEnd="50sp"
             android:layout_marginBottom="20sp"
             android:background="@drawable/rounded_background_2">
 
@@ -72,10 +73,10 @@
                 android:id="@+id/pass"
                 android:layout_width="wrap_content"
                 android:layout_height="45sp"
-                android:layout_marginLeft="20sp"
+                android:layout_marginStart="20sp"
+                android:background="@null"
                 android:ems="10"
                 android:hint="Mật khẩu"
-                android:background="@null"
                 android:inputType="text" />
 
         </TableRow>
@@ -84,16 +85,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center">
+        android:layout_marginHorizontal="40dp"
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="8dp"
+            android:layout_weight="1"
             android:backgroundTint="#55EFC4"
             android:text="Đăng nhập" />
 
@@ -101,11 +103,11 @@
             android:id="@+id/btnNoUser"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="16dp"
+            android:layout_weight="1"
             android:backgroundTint="#55EFC4"
-            android:text="Chưa có tài khoản" />
+            android:text="Đăng ký" />
 
     </LinearLayout>
 
