--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,9 +12,10 @@
 
     <ImageView
         android:id="@+id/imgAvatar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
+        android:layout_gravity="center"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="50dp"
         android:src="@mipmap/ic_logo_foreground" />
 
     <TextView
@@ -24,13 +25,14 @@
         android:textAlignment="center"
         android:textColor="@color/white"
         android:layout_marginTop="100dp"
-        android:textSize="25dp"
+        android:fontFamily="@font/bevietnampro_bold"
+        android:textSize="16sp"
         android:text="Đăng nhập bằng" />
 
     <!-- Facebook login button -->
     <LinearLayout
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_width="325dp"
+        android:layout_height="50dp"
         android:orientation="horizontal"
         android:layout_gravity="center"
         android:layout_marginTop="15dp"
@@ -40,27 +42,29 @@
 
         <ImageButton
             android:id="@+id/imgbtnFb"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:background="@drawable/rounded_button_background"
-            app:srcCompat="@drawable/facebook"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/circle_background"
+            app:srcCompat="@drawable/ic_facebook"
+            android:scaleType="centerCrop"
             android:layout_gravity="center_vertical" />
 
         <TextView
             android:id="@+id/FacebookLoginText"
+            android:fontFamily="@font/bevietnampro_regular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Đăng nhập bằng Facebook"
-            android:textColor="#4267B2"
+            android:textColor="#023E73"
             android:textSize="17sp"
-            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
             android:layout_gravity="center_vertical" />
     </LinearLayout>
 
     <!-- Gmail login button -->
     <LinearLayout
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_width="325dp"
+        android:layout_height="50dp"
         android:orientation="horizontal"
         android:layout_marginTop="15dp"
         android:layout_gravity="center"
@@ -70,20 +74,22 @@
 
         <ImageButton
             android:id="@+id/imgbtnGmail"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:background="@drawable/rounded_button_background"
-            app:srcCompat="@drawable/baseline_mail_outline_24"
+            app:srcCompat="@drawable/ic_email"
+            android:scaleType="centerCrop"
             android:layout_gravity="center_vertical" />
 
         <TextView
             android:id="@+id/GmailLoginText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/bevietnampro_regular"
             android:text="Đăng nhập bằng Gmail"
-            android:textColor="#4267B2"
+            android:textColor="#023E73"
             android:textSize="17sp"
-            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
             android:layout_gravity="center_vertical" />
     </LinearLayout>
 
@@ -93,8 +99,9 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:layout_marginTop="15dp"
-        android:textSize="25dp"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/bevietnampro_semibold"
+        android:textSize="16sp"
         android:text="Hoặc" />
 
     <!-- Phone buttons -->
@@ -120,7 +127,7 @@
             android:layout_width="43dp"
             android:layout_height="40dp"
             android:layout_gravity="center"
-            android:layout_marginLeft="50sp"
+            android:layout_marginStart="50sp"
             android:background="@drawable/round_shape"
             android:backgroundTint="@color/white"
             app:srcCompat="@drawable/baseline_login_24" />
@@ -130,14 +137,15 @@
     <TextView
         android:id="@+id/tVFooter"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Bằng việc sử dụng Ergon, bạn đã đồng ý với  Những điều khoản và Chính sách bảo mật của chúng tôi."
+        android:layout_height="0dp"
         android:layout_gravity="bottom"
-        android:gravity="center"
         android:layout_weight="1"
-        android:padding="20dp"
         android:alpha="0.5"
-        android:textSize="12sp"
-        android:textColor="@android:color/white"/>
+        android:fontFamily="@font/bevietnampro_regular"
+        android:gravity="center"
+        android:padding="20dp"
+        android:text="Bằng việc sử dụng Ergon, bạn đã đồng ý với Những điều khoản và Chính sách bảo mật của chúng tôi."
+        android:textColor="@android:color/white"
+        android:textSize="12sp" />
 
 </LinearLayout>
