--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,24 +12,24 @@
 
     <ImageButton
         android:id="@+id/imgbtnBack"
-        android:layout_width="55dp"
-        android:layout_height="40dp"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/circle_background"
         android:backgroundTint="@color/teal_700"
-        app:srcCompat="@drawable/ic_back" />
+        app:srcCompat="@drawable/baseline_arrow_back_ios_new_24" />
 
     <TextView
         android:id="@+id/tVNhapPassword"
         android:layout_width="match_parent"
+        android:fontFamily="@font/bevietnampro_bold"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginVertical="50dp"
         android:text="Đăng nhập"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="40dp"
+        android:textSize="30sp"
         android:textStyle="bold" />
 
     <!-- Trường nhập tài khoản -->
@@ -44,8 +44,7 @@
         <TableRow
             android:layout_width="269dp"
             android:layout_height="match_parent"
-            android:layout_marginStart="50sp"
-            android:layout_marginEnd="50sp"
+            android:layout_marginHorizontal="25dp"
             android:layout_marginBottom="20sp"
             android:background="@drawable/rounded_background_2">
 
@@ -56,16 +55,17 @@
                 android:layout_marginStart="20sp"
                 android:background="@null"
                 android:ems="10"
+                android:fontFamily="@font/bevietnampro_regular"
                 android:hint="Tài khoản"
-                android:inputType="text" />
+                android:inputType="text"
+                android:textColor="#8FC1D3" />
 
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="50sp"
-            android:layout_marginEnd="50sp"
+            android:layout_marginHorizontal="25dp"
             android:layout_marginBottom="20sp"
             android:background="@drawable/rounded_background_2">
 
@@ -76,8 +76,10 @@
                 android:layout_marginStart="20sp"
                 android:background="@null"
                 android:ems="10"
+                android:fontFamily="@font/bevietnampro_regular"
                 android:hint="Mật khẩu"
-                android:inputType="text" />
+                android:inputType="textPassword"
+                android:textColor="#8FC1D3" />
 
         </TableRow>
     </TableLayout>
@@ -86,6 +88,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="40dp"
+        android:layout_marginTop="48dp"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -96,7 +99,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
-            android:backgroundTint="#55EFC4"
+            android:backgroundTint="#00B894"
             android:text="Đăng nhập" />
 
         <Button
@@ -106,7 +109,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="16dp"
             android:layout_weight="1"
-            android:backgroundTint="#55EFC4"
+            android:backgroundTint="#00B894"
             android:text="Đăng ký" />
 
     </LinearLayout>
