--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -99,6 +99,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
+            android:fontFamily="@font/bevietnampro_semibold"
             android:backgroundTint="#00B894"
             android:text="Đăng nhập" />
 
@@ -108,6 +109,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="16dp"
+            android:fontFamily="@font/bevietnampro_semibold"
             android:layout_weight="1"
             android:backgroundTint="#00B894"
             android:text="Đăng ký" />
