--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -6,30 +6,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/teal_700"
-    tools:context=".Sign_in">
+    tools:context=".Sign_up">
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="100sp"
-        android:layout_marginTop="150sp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginVertical="150dp"
         android:fontFamily="@font/quicksand_bold"
-        android:text="Dịch vụ đăng ký"
+        android:text="Đăng ký"
         android:textColor="@color/white"
         android:textSize="30sp"
         android:textStyle="bold" />
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="728dp"
-        android:layout_marginTop="220sp">
+        android:layout_height="match_parent"
+        android:layout_marginTop="250dp">
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="90sp"
-            android:layout_marginRight="70sp"
+            android:layout_marginHorizontal="25dp"
             android:layout_marginBottom="20sp"
             android:background="@drawable/rounded_background_2">
 
@@ -37,8 +36,9 @@
                 android:id="@+id/editTextText3"
                 android:layout_width="wrap_content"
                 android:layout_height="45sp"
-                android:layout_marginLeft="20sp"
+                android:layout_marginStart="20sp"
                 android:ems="10"
+                android:fontFamily="@font/bevietnampro_regular"
                 android:hint="Tài khoản"
                 android:background="@null"
                 android:inputType="text" />
@@ -47,16 +47,16 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="90sp"
-            android:layout_marginRight="70sp"
+            android:layout_marginHorizontal="25dp"
             android:background="@drawable/rounded_background_2">
 
             <EditText
                 android:id="@+id/editTextText4"
                 android:layout_width="wrap_content"
                 android:layout_height="45sp"
-                android:layout_marginLeft="20sp"
+                android:layout_marginStart="20sp"
                 android:ems="10"
+                android:fontFamily="@font/bevietnampro_regular"
                 android:hint="Mật khẩu"
                 android:background="@null"
                 android:inputType="text" />
@@ -65,31 +65,30 @@
         <TableRow
             android:layout_width="199dp"
             android:layout_height="match_parent"
-            android:layout_marginLeft="100sp"
+            android:layout_marginStart="100sp"
             android:layout_marginTop="20sp"
-            android:layout_marginRight="70sp">
+            android:layout_marginEnd="70sp">
 
             <Button
                 android:id="@+id/button2"
                 android:layout_width="77dp"
+                android:fontFamily="@font/bevietnampro_semibold"
+                android:layout_marginTop="30sp"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#55EFC4"
+                android:backgroundTint="#00B894"
                 android:text="Đăng ký"
                 android:textSize="20sp" />
         </TableRow>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
     </TableLayout>
 
     <ImageButton
         android:id="@+id/back1"
-        android:layout_width="67dp"
-        android:layout_height="55dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="60dp"
         android:background="@color/teal_700"
-        app:srcCompat="@drawable/ic_arrowleft" />
+        app:srcCompat="@drawable/baseline_arrow_back_ios_new_24" />
 
 </FrameLayout>
